force-app/main/default/objects/Insurance__c/Insurance__c.object-meta.xml
<CustomObject>
    <label>Insurance</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Insurance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>