force-app/main/default/objects/Insurance__c/fields/Ins_Patient_Relationship_to_Policyholder__c.field-meta.xml
<CustomField>
    <fullName>Ins_Patient_Relationship_to_Policyholder__c</fullName>
    <label>Patient Relationship to Policyholder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Advocate</fullName>
            </value>
            <value>
                <fullName>Aunt (Maternal)</fullName>
            </value>
            <value>
                <fullName>Aunt (Paternal)</fullName>
            </value>
            <value>
                <fullName>Boyfriend</fullName>
            </value>
            <value>
                <fullName>Brother (Biological)</fullName>
            </value>
            <value>
                <fullName>Brother (Half)</fullName>
            </value>
            <value>
                <fullName>Brother-in-Law</fullName>
            </value>
            <value>
                <fullName>Brother (Legal)</fullName>
            </value>
            <value>
                <fullName>Brother (Step)</fullName>
            </value>
            <value>
                <fullName>Child Care Center Employee</fullName>
            </value>
            <value>
                <fullName>Child Care Home Provider</fullName>
            </value>
            <value>
                <fullName>Child care Worker</fullName>
            </value>
            <value>
                <fullName>Cousin (Maternal)</fullName>
            </value>
            <value>
                <fullName>Cousin (Paternal)</fullName>
            </value>
            <value>
                <fullName>Co-Worker</fullName>
            </value>
            <value>
                <fullName>Custodian (Lagal)</fullName>
            </value>
            <value>
                <fullName>Daughter (Adopted)</fullName>
            </value>
            <value>
                <fullName>Daughter (Alleged)</fullName>
            </value>
            <value>
                <fullName>Ex-Boyfriend</fullName>
            </value>
            <value>
                <fullName>Ex-Girlfriend</fullName>
            </value>
            <value>
                <fullName>Father (Adoptive)</fullName>
            </value>
            <value>
                <fullName>Father (Biological)</fullName>
            </value>
            <value>
                <fullName>Father (Foster)</fullName>
            </value>
            <value>
                <fullName>Father-in-Law</fullName>
            </value>
            <value>
                <fullName>Father (Legal)</fullName>
            </value>
            <value>
                <fullName>Father (Putative)</fullName>
            </value>
            <value>
                <fullName>Father (Step)</fullName>
            </value>
            <value>
                <fullName>Father (Unknown)</fullName>
            </value>
            <value>
                <fullName>Foster Parent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>