force-app/main/default/objects/Insurance__c/fields/Insurance_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Address_Line_2__c</fullName>
    <label>Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>