force-app/main/default/objects/Insurance__c/fields/Insurance_City__c.field-meta.xml
<CustomField>
    <fullName>Insurance_City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>