force-app/main/default/objects/Insurance__c/fields/Insurance_Effective_Policy_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Effective_Policy_Date__c</fullName>
    <label>Effective Policy Date</label>
    <type>Date</type>
</CustomField>