force-app/main/default/objects/Insurance__c/fields/Insurance_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Group_Number__c</fullName>
    <label>Group Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>