force-app/main/default/objects/Insurance__c/fields/Insurance_MA_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_MA_Number__c</fullName>
    <label>MA Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>