force-app/main/default/objects/Insurance__c/fields/Insurance_MA_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_MA_Type__c</fullName>
    <label>MA Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>