force-app/main/default/objects/Insurance__c/fields/Insurance_Managed_Care_Organization__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Managed_Care_Organization__c</fullName>
    <label>Managed Care Organization</label>
    <type>TextArea</type>
</CustomField>