force-app/main/default/objects/Insurance__c/fields/Insurance_Medical_Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Medical_Insurance_Provider__c</fullName>
    <label>Medical Insurance Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aetna</fullName>
            </value>
            <value>
                <fullName>Amerigroup Mariland, Inc</fullName>
            </value>
            <value>
                <fullName>Blue Cross/Blue Shield</fullName>
            </value>
            <value>
                <fullName>Care First</fullName>
            </value>
            <value>
                <fullName>Diamond Plan(Coventry)</fullName>
            </value>
            <value>
                <fullName>Helix Family Choice</fullName>
            </value>
            <value>
                <fullName>JAI Medical System, Inc.</fullName>
            </value>
            <value>
                <fullName>Kaiser permanente</fullName>
            </value>
            <value>
                <fullName>Magellan</fullName>
            </value>
            <value>
                <fullName>Maryland Physicians Care</fullName>
            </value>
            <value>
                <fullName>Priority Partners</fullName>
            </value>
            <value>
                <fullName>Tri Care</fullName>
            </value>
            <value>
                <fullName>United Health Care</fullName>
            </value>
            <value>
                <fullName>US Family Health Plan</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>