force-app/main/default/objects/Insurance__c/fields/Insurance_Policy_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Holder_Name__c</fullName>
    <label>Policy Holder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>