force-app/main/default/objects/Insurance__c/fields/Insurance_Provider_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider_Phone_Number__c</fullName>
    <label>Provider Phone Number</label>
    <type>Phone</type>
</CustomField>