force-app/main/default/objects/Insurance__c/fields/Insurance_Provider_type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider_type__c</fullName>
    <label>Provider type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>