force-app/main/default/objects/Insurance__c/fields/Insurance_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>