force-app/main/default/objects/Insurance__c/fields/Insurance_Type_of_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type_of_Insurance__c</fullName>
    <label>Type of Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Other Public</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>