force-app/main/default/objects/Insurance__c/fields/Insurance_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Zip_Code__c</fullName>
    <label>Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>